add first main block

--- a/index.html
+++ b/index.html
@@ -89,7 +89,34 @@
     </div>
   </header>
   <main class="main">
-
+      <blockquote class="blockquote">
+        <div class="container">
+          <p class="blockquote__text">
+            "WHAT LOOKS IMPOSSIBLE TODAY, TOMORROW WILL BE YOUR SOURCE OF INSPIRATION AND RELAXATION"
+          </p>
+        </div>
+      </blockquote>
+      <section class="who_we_are">
+        <div class="container">
+          <div class="who_we_are__inner">
+            <div class="who_we_are__content">
+              <p class="who_we_are-intro">Who we are</p>
+              <h1 class="who_we_are-title">VILAMOURA SURF SCHOOL</h1>
+              <ul class="who_we_are-list">
+                <li class="who_we_are-item">Algarve</li>
+                <li class="who_we_are-item">South coast</li>
+                <li class="who_we_are-item">Perfect waves for your experience</li>
+              </ul>
+              <p class="who_we_are-text-pt1">Was founded in 2006, being the FIRST SURF SCHOOL OF VILAMOURA BEACH, ALGARVE. Our school is certified by the Portuguese Surfing Federation and by Turismo de Portugal. The School aims to teach the art of surfing the waves in a safe, correct and relaxed way, always under the close and attentive supervision of teachers. Thousands of people have already learned from us to slide on the wave wall on top of a board.</p>
+              <p class="who_we_are-text-pt2">We have facilities that allow our students to equip themselves and keep their belongings safe and at the end of the class they have a warm shower at their disposal. We have a wide variety of safe boards (softboards) and modern wetsuits to teach in a safe and fun way.
+              The heads of the School are trained by the Faculty, experienced and accredited by the Portuguese Surf Federation. The School is open everyday of the year, including weekends and holidays. Hours vary depending on tides and sea conditions.</p>
+            </div>
+            <div class="who_we_are-pic">
+              <img class="who_we_are-img" src="images/who_we_are.jpg" alt="">
+              <button class="act_btn light">ACTIVITIES</button>
+            </div>
+          </div>
+      </section>
   </main>
   <footer class="footer">
 
