add activities block

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <li class="who_we_are-item">South coast</li>
                 <li class="who_we_are-item">Perfect waves for your experience</li>
               </ul>
-              <p class="who_we_are-text-pt1">Was founded in 2006, being the FIRST SURF SCHOOL OF VILAMOURA BEACH, ALGARVE. Our school is certified by the Portuguese Surfing Federation and by Turismo de Portugal. The School aims to teach the art of surfing the waves in a safe, correct and relaxed way, always under the close and attentive supervision of teachers. Thousands of people have already learned from us to slide on the wave wall on top of a board.</p>
+              <p class="who_we_are-text-pt1">Was founded in 2006, being the FIRST SURF SCHOOL OF VILAMOURA BEACH, ALGARVE. Our school is certified by the Portuguese Surfing Federation and by Turismo de Portugal. The School aims to teach the art of surfing the waves in a safe, correct and relaxed way, always under the close and attentive supervision of teachers. Thousands of people have already learned from us to slide on the wave wall on top of a board.</p>
               <p class="who_we_are-text-pt2">We have facilities that allow our students to equip themselves and keep their belongings safe and at the end of the class they have a warm shower at their disposal. We have a wide variety of safe boards (softboards) and modern wetsuits to teach in a safe and fun way.
               The heads of the School are trained by the Faculty, experienced and accredited by the Portuguese Surf Federation. The School is open everyday of the year, including weekends and holidays. Hours vary depending on tides and sea conditions.</p>
             </div>
@@ -116,6 +116,33 @@
               <button class="act_btn light">ACTIVITIES</button>
             </div>
           </div>
+        </div>  
+      </section>
+      <section class="activities">
+        <div class="container">
+          <div class="activities__inner">
+            <p class="activities-intro">Activities</p>
+            <div class="activities__content">
+              <h1 class="activities-title">WITHOUT RIP CURRENTS - SANDY BEACHES <br> YOUR BEST ADVENTURE</h1>
+              <div class="activities2">
+                <p class="activities-text">Welcome to our school! If you've come this far, it's because you're interested in taking your first steps in surfing. It's never too late to start riding the waves, you'll love this new lifestyle! Surfing improves your physical and mental health in a relaxed and fun environment. <br>
+                Vilamoura Surf School also offers group and private lessons in Surf, Stand Up Paddle Board, Longboard, Bodyboard, Skimming and Carver Skate Board. If you are looking for to rent our equipment, we have high performance boards and wetsuits.</p>
+                <button class="book_btn">BOOK NOW</button>
+              </div>
+            </div>
+            <ul class="activities-list">
+              <li class="activities-item">Privat lessons</li>
+              <li class="activities-item">Group lessons</li>
+              <li class="activities-item">
+                <span>Surf &sup rentals</span>
+              </li>
+              <li class="activities-item">
+                <span>Stand up puddle</span>
+              </li>
+              <li class="activities-item">Surf trips</li>
+            </ul>
+          </div>
+        </div>
       </section>
   </main>
   <footer class="footer">
