add sections and footer

--- a/index.html
+++ b/index.html
@@ -144,9 +144,109 @@
           </div>
         </div>
       </section>
+      <section class="surf">
+        <div class="surf-pic">
+          <img src="images/surf_pic.jpg" alt="">
+        </div>
+      </section>
+      <section class="review">
+        <div class="container">
+          <div class="review__inner">
+            <div class="review-top">
+              <p class="review-intro">Review</p>
+              <h1 class="review-title">LET'S GO SURF & SUP</h1>
+            </div>
+            <ul class="review-list">
+              <li class="review-item">
+                <img class="review-item-img" alt="" src="images/review1.jpg">
+                <p class="review-item-text">"I rented the whole equipment for 7 days. New GEAR! 10 stars."</p>
+                <p class="review-item-name">/Ana<br>May 2023</p>
+              </li>
+              <li class="review-item">
+                <img class="review-item-img" alt="" src="images/review2.jpg">
+                <div class="review-item-content">
+                  <p class="review-item-text">"It was an unforgettable experience.<br>The super professional instructors.<br>I loved it!"</p>
+                  <p class="review-item-name">/Sara<br>January 2024</p>
+                </div>
+              </li>
+              <li class="review-item">
+                <img class="review-item-img" alt="" src="images/review3.jpg">
+                <div class="review-item-content">
+                  <p class="review-item-text">"Class at the end of the day. Super attentive guys. They always accompanied the lesson in the water with me. We fell very safety all the time. Thanks Vilamoura Surf School"</p>
+                  <p class="review-item-name">/Mark<br>February 2024</p>
+                </div>
+              </li>
+              <li class="review-item">
+                <img class="review-item-img" alt="" src="images/review4.jpg">
+                <p class="review-item-text">The best experiens in my life</p>
+                <p class="review-item-name">/Tom<br>December 2023</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
   </main>
   <footer class="footer">
-
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__top">
+          <h1 class="footer-title">
+            VILAMOURA SURF SCHOOL
+          </h1>
+          <div class="footer__logo">
+            <img src="images/logo.svg" alt="">
+          </div>
+        </div>
+        <div class="footer__content">
+          <div class="footer-school">
+            <h4 class="footer-school-title">Surf School</h4>
+            <p class="footer-record">record n.325<br>Portuguese Surfing Federation</p>
+            <p class="footer-school-location">RNAAT registration 986/2016</p>
+          </div>
+          <div class="address">
+            <h4 class="footer-address-title">Address</h4>
+            <p class="footer-address-record">record n.325<br>Portuguese Surfing Federation</p>
+            <p class="footer-address-location">Vilamoura - Algarve - Portugal</p>
+          </div>
+          <div class="contacts">
+            <h4 class="footer-contacts-title">Contacts</h4>
+            <p class="footer-contacts-mobile">Mobile and wattsapp<br>(+351) 912568342</p>
+            <p class="footer-contacts-email">vilamourasurf@gmail.com</p>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__bottom-socials">
+              <ul class="footer__socials-list">
+                <li class="footer__socials-items">
+                  <a href="#" class="footer__socials-link">
+                    <img src="images/facebook.svg" alt="">
+                  </a>
+                </li>
+                <li class="footer__socials-items">
+                  <a href="#" class="footer__socials-link">
+                    <img src="images/instagram.svg" alt="">
+                  </a>
+                </li>
+                <li class="footer__socials-items">
+                  <a href="#" class="footer__socials-link">
+                    <img src="images/youtube.svg" alt="">
+                  </a>
+                </li>
+                <li class="footer__socials-items">
+                  <a href="#" class="footer__socials-link">
+                    <img src="images/whatsapp.svg" alt="">
+                  </a>
+                </li>
+              </ul>
+          </div>
+          <div class="footer__bottom-conditions">
+              <a href="#" class="footer-terms">Terms and conditions</a>
+              <a href="#" class="footer-policy">Privacy policy</a>
+              <a href="#" class="footer-compliant">Complaint book</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="js/main.js"></script>
 </body>
