--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="footer__content">
           <div class="footer-school">
             <h4 class="footer-school-title">Surf School</h4>
-            <p class="footer-record">record n.325<br>Portuguese Surfing Federation</p>
+            <p class="footer-school-record">record n.325<br>Portuguese Surfing Federation</p>
             <p class="footer-school-location">RNAAT registration 986/2016</p>
           </div>
           <div class="address">
