fix header and margin

--- a/index.html
+++ b/index.html
@@ -14,134 +14,128 @@
 
 <body>
   <header class="header">
-    <div class="container">
-      <div class="header__top">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">home</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">activities</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">pricing plan</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">contact us</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">blog</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">about us</a>
-          </li>
-        </ul>
-        <a href="tel:+35123456789" class="header__contact-phone">+35123456789</a>
-      </div>
-      <img class="title-img" src="images/title.png">
-      <p class="header__location">Vilamoura. Portugal</p>
-      <div class="header__main">
-        <div class="header__content">
-          <ul class="header__advantages-list">
-            <li class="header__advantages-item">Privat lessons</li>
-            <li class="header__advantages-item">Group lessons</li>
-            <li class="header__advantages-item">Surf &sup rentals</li>
-            <li class="header__advantages-item">Stand up puddle</li>
-            <li class="header__advantages-item">Surf trips</li>
-          </ul>
-        </div>  
-        <div class="header__moreinfo">
-          <h3 class="header__moreinfo-title">NAZARE. BIG WAVE TRIP 10.02.2025</h3>
-          <a href="#" class="header__moreinfo-link">MORE INFO</a>
-          <img class="header__moreinfo-img" src="images/more_info.jpg" alt="">
-        </div>
-      </div>
-      <div class="header__bottom">
-        <div class="header__socials">
-          <ul class="header__socials-list">
-            <li class="header__socials-items">
-              <a href="#" class="header__socials-link">
-                <img src="images/facebook.svg" alt="">
-              </a>
-            </li>
-            <li class="header__socials-items">
-              <a href="#" class="header__socials-link">
-                <img src="images/instagram.svg" alt="">
-              </a>
-            </li>
-            <li class="header__socials-items">
-              <a href="#" class="header__socials-link">
-                <img src="images/youtube.svg" alt="">
-              </a>
-            </li>
-            <li class="header__socials-items">
-              <a href="#" class="header__socials-link">
-                <img src="images/whatsapp.svg" alt="">
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="header__actions">
-          <button class="book_btn">BOOK NOW</button>
-          <button class="act_btn">ACTIVITIES</button>
-        </div>
-      </div>
+    <div class="header__top">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">home</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">activities</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">pricing plan</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">contact us</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">blog</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__item-link">about us</a>
+        </li>
+      </ul>
+      <a href="tel:+35123456789" class="header__contact-phone">+35123456789</a>
     </div>
   </header>
   <main class="main">
-      <blockquote class="blockquote">
-        <div class="container">
-          <p class="blockquote__text">
-            "WHAT LOOKS IMPOSSIBLE TODAY, TOMORROW WILL BE YOUR SOURCE OF INSPIRATION AND RELAXATION"
-          </p>
-        </div>
-      </blockquote>
-      <section class="who_we_are">
-        <div class="container">
-          <div class="who_we_are__inner">
-            <div class="who_we_are__content">
-              <p class="who_we_are-intro">Who we are</p>
-              <h1 class="who_we_are-title">VILAMOURA SURF SCHOOL</h1>
-              <ul class="who_we_are-list">
-                <li class="who_we_are-item">Algarve</li>
-                <li class="who_we_are-item">South coast</li>
-                <li class="who_we_are-item">Perfect waves for your experience</li>
-              </ul>
-              <p class="who_we_are-text-pt1">Was founded in 2006, being the FIRST SURF SCHOOL OF VILAMOURA BEACH, ALGARVE. Our school is certified by the Portuguese Surfing Federation and by Turismo de Portugal. The School aims to teach the art of surfing the waves in a safe, correct and relaxed way, always under the close and attentive supervision of teachers. Thousands of people have already learned from us to slide on the wave wall on top of a board.</p>
-              <p class="who_we_are-text-pt2">We have facilities that allow our students to equip themselves and keep their belongings safe and at the end of the class they have a warm shower at their disposal. We have a wide variety of safe boards (softboards) and modern wetsuits to teach in a safe and fun way.
-              The heads of the School are trained by the Faculty, experienced and accredited by the Portuguese Surf Federation. The School is open everyday of the year, including weekends and holidays. Hours vary depending on tides and sea conditions.</p>
-            </div>
-            <div class="who_we_are-pic">
-              <img class="who_we_are-img" src="images/who_we_are.jpg" alt="">
-              <button class="act_btn light">ACTIVITIES</button>
-            </div>
+    <div class="container">
+      <section class="banner">
+        <img class="title-img" src="images/title.png">
+        <p class="location">Vilamoura. Portugal</p>
+        <div class="banner__main">
+          <div class="banner__content">
+            <ul class="banner__advantages-list">
+              <li class="banner__advantages-item">Privat lessons</li>
+              <li class="banner__advantages-item">Group lessons</li>
+              <li class="banner__advantages-item">Surf &sup rentals</li>
+              <li class="banner__advantages-item">Stand up puddle</li>
+              <li class="banner__advantages-item">Surf trips</li>
+            </ul>
+          </div>  
+          <div class="banner__moreinfo">
+            <h3 class="banner__moreinfo-title">NAZARE. BIG WAVE TRIP 10.02.2025</h3>
+            <a href="#" class="banner__moreinfo-link">MORE INFO</a>
+            <img class="banner__moreinfo-img" src="images/more_info.jpg" alt="">
           </div>
-        </div>  
-      </section>
-      <section class="activities">
-        <div class="container">
-          <div class="activities__inner">
-            <p class="activities-intro">Activities</p>
-            <div class="activities__content">
-              <h1 class="activities-title">WITHOUT RIP CURRENTS - SANDY BEACHES <br> YOUR BEST ADVENTURE</h1>
-              <div class="activities2">
-                <p class="activities-text">Welcome to our school! If you've come this far, it's because you're interested in taking your first steps in surfing. It's never too late to start riding the waves, you'll love this new lifestyle! Surfing improves your physical and mental health in a relaxed and fun environment. <br>
-                Vilamoura Surf School also offers group and private lessons in Surf, Stand Up Paddle Board, Longboard, Bodyboard, Skimming and Carver Skate Board. If you are looking for to rent our equipment, we have high performance boards and wetsuits.</p>
-                <button class="book_btn">BOOK NOW</button>
-              </div>
-            </div>
-            <ul class="activities-list">
-              <li class="activities-item">Privat lessons</li>
-              <li class="activities-item">Group lessons</li>
-              <li class="activities-item">
-                <span>Surf &sup rentals</span>
+        </div>
+        <div class="banner__bottom">
+          <div class="banner__socials">
+            <ul class="banner__socials-list">
+              <li class="banner__socials-items">
+                <a href="#" class="banner__socials-link">
+                  <img src="images/facebook.svg" alt="">
+                </a>
               </li>
-              <li class="activities-item">
-                <span>Stand up puddle</span>
+              <li class="banner__socials-items">
+                <a href="#" class="banner__socials-link">
+                  <img src="images/instagram.svg" alt="">
+                </a>
               </li>
-              <li class="activities-item">Surf trips</li>
+              <li class="banner__socials-items">
+                <a href="#" class="banner__socials-link">
+                  <img src="images/youtube.svg" alt="">
+                </a>
+              </li>
+              <li class="banner__socials-items">
+                <a href="#" class="banner__socials-link">
+                  <img src="images/whatsapp.svg" alt="">
+                </a>
+              </li>
             </ul>
           </div>
+          <div class="banner__actions">
+            <button class="book_btn">BOOK NOW</button>
+            <button class="act_btn">ACTIVITIES</button>
+          </div>
+        </div>
+      </section>
+      <blockquote class="blockquote">
+        <p class="blockquote__text">"WHAT LOOKS IMPOSSIBLE TODAY, TOMORROW WILL BE YOUR SOURCE OF INSPIRATION AND RELAXATION"
+        </p>
+      </blockquote>
+      <section class="who_we_are">
+        <div class="who_we_are__inner">
+          <div class="who_we_are__content">
+            <p class="who_we_are-intro">Who we are</p>
+            <h1 class="who_we_are-title">VILAMOURA SURF SCHOOL</h1>
+            <ul class="who_we_are-list">
+              <li class="who_we_are-item">Algarve</li>
+              <li class="who_we_are-item">South coast</li>
+              <li class="who_we_are-item">Perfect waves for your experience</li>
+            </ul>
+            <p class="who_we_are-text-pt1">Was founded in 2006, being the FIRST SURF SCHOOL OF VILAMOURA BEACH, ALGARVE. Our school is certified by the Portuguese Surfing Federation and by Turismo de Portugal. The School aims to teach the art of surfing the waves in a safe, correct and relaxed way, always under the close and attentive supervision of teachers. Thousands of people have already learned from us to slide on the wave wall on top of a board.</p>
+            <p class="who_we_are-text-pt2">We have facilities that allow our students to equip themselves and keep their belongings safe and at the end of the class they have a warm shower at their disposal. We have a wide variety of safe boards (softboards) and modern wetsuits to teach in a safe and fun way.
+              The heads of the School are trained by the Faculty, experienced and accredited by the Portuguese Surf Federation. The School is open everyday of the year, including weekends and holidays. Hours vary depending on tides and sea conditions.</p>
+          </div>
+          <div class="who_we_are-pic">
+            <img class="who_we_are-img" src="images/who_we_are.jpg" alt="">
+            <button class="act_btn light">ACTIVITIES</button>
+          </div>
+        </div>
+      </section>
+      <section class="activities">
+        <div class="activities__inner">
+          <p class="activities-intro">Activities</p>
+          <div class="activities__content">
+            <h1 class="activities-title">WITHOUT RIP CURRENTS - SANDY BEACHES <br> YOUR BEST ADVENTURE</h1>
+            <div class="activities2">
+              <p class="activities-text">Welcome to our school! If you've come this far, it's because you're interested in taking your first steps in surfing. It's never too late to start riding the waves, you'll love this new lifestyle! Surfing improves your physical and mental health in a relaxed and fun environment. <br>
+              Vilamoura Surf School also offers group and private lessons in Surf, Stand Up Paddle Board, Longboard, Bodyboard, Skimming and Carver Skate Board. If you are looking for to rent our equipment, we have high performance boards and wetsuits.</p>
+              <button class="book_btn">BOOK NOW</button>
+            </div>
+          </div>
+          <ul class="activities-list">
+            <li class="activities-item">Privat lessons</li>
+            <li class="activities-item">Group lessons</li>
+            <li class="activities-item">
+              <span>Surf &sup rentals</span>
+            </li>
+            <li class="activities-item">
+              <span>Stand up puddle</span>
+            </li>
+            <li class="activities-item">Surf trips</li>
+          </ul>
         </div>
       </section>
       <section class="surf">
@@ -150,41 +144,40 @@
         </div>
       </section>
       <section class="review">
-        <div class="container">
-          <div class="review__inner">
-            <div class="review-top">
-              <p class="review-intro">Review</p>
-              <h1 class="review-title">LET'S GO SURF & SUP</h1>
-            </div>
-            <ul class="review-list">
-              <li class="review-item">
-                <img class="review-item-img" alt="" src="images/review1.jpg">
-                <p class="review-item-text">"I rented the whole equipment for 7 days. New GEAR! 10 stars."</p>
-                <p class="review-item-name">/Ana<br>May 2023</p>
-              </li>
-              <li class="review-item">
-                <img class="review-item-img" alt="" src="images/review2.jpg">
-                <div class="review-item-content">
-                  <p class="review-item-text">"It was an unforgettable experience.<br>The super professional instructors.<br>I loved it!"</p>
-                  <p class="review-item-name">/Sara<br>January 2024</p>
-                </div>
-              </li>
-              <li class="review-item">
-                <img class="review-item-img" alt="" src="images/review3.jpg">
-                <div class="review-item-content">
-                  <p class="review-item-text">"Class at the end of the day. Super attentive guys. They always accompanied the lesson in the water with me. We fell very safety all the time. Thanks Vilamoura Surf School"</p>
-                  <p class="review-item-name">/Mark<br>February 2024</p>
-                </div>
-              </li>
-              <li class="review-item">
-                <img class="review-item-img" alt="" src="images/review4.jpg">
-                <p class="review-item-text">The best experiens in my life</p>
-                <p class="review-item-name">/Tom<br>December 2023</p>
-              </li>
-            </ul>
+        <div class="review__inner">
+          <div class="review-top">
+            <p class="review-intro">Review</p>
+            <h1 class="review-title">LET'S GO SURF & SUP</h1>
           </div>
+          <ul class="review-list">
+            <li class="review-item">
+              <img class="review-item-img" alt="" src="images/review1.jpg">
+              <p class="review-item-text">"I rented the whole equipment for 7 days. New GEAR! 10 stars."</p>
+              <p class="review-item-name">/Ana<br>May 2023</p>
+            </li>
+            <li class="review-item">
+              <img class="review-item-img" alt="" src="images/review2.jpg">
+              <div class="review-item-content">
+                <p class="review-item-text">"It was an unforgettable experience<br>The super professional instructors.<br>I loved it!"</p>
+                <p class="review-item-name">/Sara<br>January 2024</p>
+              </div>
+            </li>
+            <li class="review-item">
+              <img class="review-item-img" alt="" src="images/review3.jpg">
+              <div class="review-item-content">
+                <p class="review-item-text">"Class at the end of the day. Super attentive guys. They always accompanied the lesson in the water with me. We fell very safety all the time. Thanks Vilamoura Surf School"</p>
+                <p class="review-item-name">/Mark<br>February 2024</p>
+              </div>
+            </li>
+            <li class="review-item">
+              <img class="review-item-img" alt="" src="images/review4.jpg">
+              <p class="review-item-text">The best experiens in my life</p>
+              <p class="review-item-name">/Tom<br>December 2023</p>
+            </li>
+          </ul>
         </div>
       </section>
+    </div>  
   </main>
   <footer class="footer">
     <div class="container">
