fix header size

--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 
 <body>
   <header class="header">
-    <div class="header__top">
-      <ul class="menu__list">
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">home</a>
-        </li>
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">activities</a>
-        </li>
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">pricing plan</a>
-        </li>
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">contact us</a>
-        </li>
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">blog</a>
-        </li>
-        <li class="menu__item">
-          <a href="#" class="menu__item-link">about us</a>
-        </li>
-      </ul>
-      <a href="tel:+35123456789" class="header__contact-phone">+35123456789</a>
-    </div>
+    <div class="container">
+      <div class="header__top">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">home</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">activities</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">pricing plan</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">contact us</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">blog</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link">about us</a>
+          </li>
+        </ul>
+        <a href="tel:+35123456789" class="header__contact-phone">+35123456789</a>
+      </div>
+    </div>  
   </header>
   <main class="main">
     <div class="container">
