--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__top">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">home</a>
+      <div class="header-top">
+        <ul class="header-menu">
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">home</a>
           </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">activities</a>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">activities</a>
           </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">pricing plan</a>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">pricing plan</a>
           </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">contact us</a>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">contact us</a>
           </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">blog</a>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">blog</a>
           </li>
-          <li class="menu__item">
-            <a href="#" class="menu__item-link">about us</a>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">about us</a>
           </li>
         </ul>
-        <a href="tel:+35123456789" class="header__contact-phone">+35123456789</a>
+        <a href="tel:+35123456789" class="header-phone">+35123456789</a>
       </div>
     </div>  
   </header>
